# fvmsolver

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Build-a-HIGH-FIDELITY-CFD-solver-for-FDM-extrusion-focu_1771676866934.txt
backend/: server.py
frontend/: app.js  index.html  style.css
solver/: __init__.py  fvm_solver.py  grid.py  materials.py
