[project]
name = "fvmsolver"
version = "1.0.0"
description = "2D axisymmetric CFD solver for FDM extrusion simulation with real-time web visualization"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["cfd", "fdm", "extrusion", "3d-printing", "finite-volume", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastapi>=0.129.0",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
